data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1130.wast
;; 1. **Test Case 1**: A `br_table` instruction with an index that matches the last target in the target list of a loop block.    - **Constraint**: Ensuring that the index within `br_table` correctly computes the valid jump to the last target in the list.    - **Relation to br_table Edge Case**: Tests if the `br_table` correctly handles the loop context and last target without overshooting.

(assert_invalid
  (module
    (func (loop (block (br_table 0 1) (end))))
  )
  "out of bounds br_table"
)